--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VISHWAPRENEUR '24 | Quick Links</title>
+    <title>TEAMMO & Co. | Quick Links</title>
     <link rel="shortcut icon" href="./assets/logot.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
   </head>
