--- a/index.html
+++ b/index.html
@@ -94,31 +94,16 @@
         Stay Tuned
         <img src="./assets/vr.png" alt="" height="25px" />
         <div class="logo-links-mobile">
-          <a target="_blank" href="https://www.youtube.com/user/vishwapreneur">
-            <img
-              class="link-icon"
-              src="./assets/youtube.svg"
-              alt="X(twitter) icon"
-            />
-          </a>
-          <a target="_blank" href="https://www.instagram.com/edcviit">
+          
+          <a target="_blank" href="https://www.instagram.com/teammo.and.co">
             <img
               src="https://cdn3.iconfinder.com/data/icons/2018-social-media-black-and-white-logos/1000/2018_social_media_popular_app_logo_instagram-512.png"
               alt="instagram icon"
               class="link-icon"
             />
           </a>
-          <a
-            target="_blank"
-            href="https://in.linkedin.com/company/entrepreneurship-development-cell-viit"
-          >
-            <img
-              src="https://cdn3.iconfinder.com/data/icons/2018-social-media-black-and-white-logos/1000/2018_social_media_popular_app_logo_linkedin-512.png"
-              alt="linkedIn icon"
-              class="link-icon"
-            />
-          </a>
-          <a href="https://twitter.com/edcviit">
+         
+          <a href="https://twitter.com/teammo.and.co">
             <img
               class="link-icon"
               src="./assets/x-icon.png"
